[package]
name = "myblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwasm = "0.5.0"
sycamore = "0.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
perseus = { version = "0.3.5", features = ["hydrate"] }
ureq = "2"
openssl = { version = "0.10.38", features = ["v110"] }
lazy_static = "1.4.0"
deadpool-postgres = {version="0.10.2", features =["serde"]}
derive_more = "0.99.17"
tokio = "1.18.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
chrono = "0.4.19"
postgres_query = "0.3.3"
postgres_query_macro = "0.3.1"
tokio-postgres = { version = "0.7.5", features = ["with-chrono-0_4", "with-uuid-0_8"] }
dotenv = "0.15.0"
config = "0.13.1"
# anyhow = "1.0.57"
# thiserror = "1.0"